--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200&display=swap");
-.centerflex, .flex-form, .admins-section, .empleados-cover, .intro-p, .title-cover, .bg-intro {
+.centerflex, .cover-products, .newsletter-box, .cover-newsletter, .form-styling, .admins-section, .empleados-cover, .intro-p, .title-cover, .bg-intro {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,16 +11,25 @@
   padding: 2rem;
 }
 
-.y-transition, header {
-  animation: 1.2s ease transicionEnY;
+.y-transition, .card-icons, header {
+  animation: 1.2s ease transitionY;
 }
 
-.opacity-0-100, .bg-intro-content {
+.opacity-0-100, .newsletter-menu, .cover-newsletter h1, .bg-intro-content {
   animation: 2.5s ease opacity0to1;
 }
 
-.x-transicion, .empleados-cover h1 {
-  animation: 1.9s ease-in-out transicionEnX;
+.x-transition, .product-container-alt, .cover-products h1, .contacts-flex iframe, .empleados-cover h1 {
+  animation: 1.9s ease-in-out transitionX;
+}
+
+.x-transitionNegative, .product-container, .info-box {
+  animation: 1.9s ease-in-out transitionXNegative;
+}
+
+.colorMain, .main-btn {
+  background: rgb(102, 4, 4);
+  background: linear-gradient(90deg, rgb(102, 4, 4) 8%, rgb(0, 0, 0) 85%, rgb(93, 2, 2) 100%);
 }
 
 .content-wrap {
@@ -92,6 +101,7 @@ nav {
 }
 
 .navbar-main {
+  margin-left: 3%;
   display: flex;
   gap: 5rem;
 }
@@ -124,33 +134,66 @@ nav {
   font-family: "Bebas Neue", sans-serif;
 }
 
-.btn-bg {
-  display: inline-block;
-  padding: 1rem;
-  background-color: black;
-  border-radius: 4px;
-  font-size: 40px;
+.main-btn {
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 13px 23px;
+  border: 1px solid #222222;
 }
 
-.btn-line {
-  max-width: 50px;
-  height: 2px;
-  background-color: yellow;
-  transition: all 0.4s ease-in-out;
+.title-cover {
+  margin-bottom: 3rem;
+}
+
+.div-line {
+  border-bottom: 3px solid black;
+  width: 80%;
 }
 
 .intro-p {
   gap: 30%;
 }
 
-.container-intro {
-  background: rgb(0, 0, 0);
-  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(85, 28, 28) 49%, rgb(0, 0, 0) 100%);
+.sales-index {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 0.1fr));
+  grid-gap: 1.2rem;
+  justify-content: center;
+}
+
+.traditions-ad {
+  display: flex;
+  justify-content: space-around;
+}
+
+.card-icons {
+  padding: 1rem;
+  width: max-content;
+  border: 3px solid black;
+  border-radius: 50%;
+}
+
+.box-contact-index {
+  border-radius: 12px;
+  box-shadow: 10px 10px 5px 0px rgba(199, 124, 124, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(199, 124, 124, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(199, 124, 124, 0.75);
+  background-color: black;
+  padding: 2rem;
+  width: 50%;
+  height: 50%;
+  flex-direction: column;
+}
+.box-contact-index button {
+  border-radius: 12px;
 }
 
 .empleados-cover {
   background-size: cover;
-  background-position: center;
   min-height: 100vh;
   width: 100%;
   background: url(../imgs/bg-empleados.jpg);
@@ -173,7 +216,7 @@ nav {
 }
 
 .admins-section {
-  gap: 20rem;
+  gap: 15rem;
 }
 
 .employee-section {
@@ -214,11 +257,6 @@ nav {
   font-size: 30px;
 }
 
-.usercard:hover {
-  background: rgb(207, 184, 194);
-  background: linear-gradient(52deg, rgb(207, 184, 194) 0%, rgb(85, 46, 46) 0%);
-}
-
 /* CONTACTOS */
 .bg-form {
   background: url(../imgs/background-form.jpg);
@@ -234,33 +272,26 @@ nav {
 }
 
 .map-settings {
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  min-width: 100vw;
-}
-
-.flex-form {
-  padding-top: 3rem;
-  padding-left: 20rem;
-  padding-right: 20rem;
-  padding-bottom: 3rem;
-  margin-top: 10rem;
-  margin-bottom: 10rem;
-  background: rgba(255, 255, 255, 0);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-}
-.flex-form h3 {
-  color: black;
-  font-size: 70px;
+  display: flex;
+  gap: 5rem;
 }
 
 .info-box {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   gap: 15%;
+  padding: 3rem;
+  background-color: white;
+  border-radius: 10px;
+}
+.info-box h3 {
+  color: black;
+  font-size: 70px;
 }
 
+.contacts-flex {
+  margin-top: 7rem;
+}
 .contact-info {
   display: grid;
   grid-template-columns: repeat(2, 100px);
@@ -272,54 +303,85 @@ nav {
   font-size: 50px;
 }
 
-.newsletter-box {
-  background: url(https://www.bodegasdomecq.com/sites/default/files/2022-01/D-newsletter-header_1.jpg);
+.cover-newsletter {
+  background: url(../imgs/newsletter-bg.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  background-position: center center;
+  min-width: 100vw;
+  padding: 10rem;
 }
-.newsletter-box h3, .newsletter-box p, .newsletter-box label, .newsletter-box input, .newsletter-box button {
-  font-family: "Oswald", sans-serif;
-  color: white;
-}
-.newsletter-box h3 {
-  font-size: 60px;
-}
-.newsletter-box p {
-  font-size: 30px;
-}
-.newsletter-box input {
-  max-width: 50%;
+.cover-newsletter h1 {
+  font-size: 100px;
 }
 
-.button-newsletter {
+.newsletter-input {
+  border: 1px solid black;
+}
+.newsletter-input p {
+  font-family: "Bebas Neue", sans-serif;
+}
+.newsletter-input label {
+  border-right: 1px solid black;
+}
+.newsletter-input input {
+  border: none;
+  outline: none;
+}
+.newsletter-input input:focus {
+  outline: none;
+}
+
+.newsletter-custom {
+  border-radius: 104px 104px 0px 10px;
+  -webkit-border-radius: 104px 104px 0px 10px;
+  -moz-border-radius: 104px 104px 0px 10px;
+}
+
+.newsletter-menu {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.52);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.52);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.52);
   border-radius: 15px;
-  background-color: blueviolet;
-  width: min-content;
+  padding: 2rem;
+}
+.newsletter-menu img {
+  width: 100%;
+  height: 100%;
+}
+
+.cover-products {
+  background: url(../imgs/bg-products.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  min-width: 100vw;
+  padding: 10rem;
+}
+.cover-products h1 {
+  font-size: 100px;
 }
 
 .productos-gallery {
   padding-top: 5rem;
   display: grid;
-  place-items: center;
-  gap: 5rem;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 0.1fr));
+  grid-gap: 1.2rem;
+  justify-content: center;
 }
 
 .product-card {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  border: 2px solid black;
+  border: 1px solid black;
   transition: transform 0.3s ease;
 }
 .product-card img {
   border: 1px solid black;
-  padding: 2rem;
 }
 .product-card p {
   font-family: "Bebas Neue", sans-serif;
@@ -334,10 +396,29 @@ nav {
   transform: scale(1.05);
 }
 
-.bg-products {
-  background: url(../imgs/bg-products.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.product-container {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+}
+.product-container img {
+  width: 50%;
+  height: 50%;
+}
+
+.product-container-alt {
+  display: flex;
+  justify-content: start;
+  height: fit-content;
+}
+.product-container-alt img {
+  width: 50%;
+  height: 50%;
+  margin-left: 5rem;
+}
+
+.text-products-container {
+  width: 25%;
 }
 
 .footer-line {
@@ -358,7 +439,7 @@ footer p {
   font-family: "Bebas Neue", sans-serif;
 }
 
-@keyframes transicionEnY {
+@keyframes transitionY {
   0% {
     transform: translateY(-100%);
     opacity: 0;
@@ -376,9 +457,19 @@ footer p {
     opacity: 1;
   }
 }
-@keyframes transicionEnX {
+@keyframes transitionX {
   0% {
     transform: translateX(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes transitionXNegative {
+  0% {
+    transform: translateX(-50%);
     opacity: 0;
   }
   100% {
@@ -402,10 +493,46 @@ footer p {
   .bg-intro-content {
     margin-top: 5rem;
   }
+  .cover-newsletter h1 {
+    font-size: 80px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .filter-bg h1 {
+    font-size: 70px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .product-container {
+    justify-content: center;
+    animation: 2.5s ease opacity0to1;
+  }
+  .product-container-alt {
+    justify-content: center;
+    animation: 2.5s ease opacity0to1;
+  }
+  .column-products {
+    display: flex;
+    flex-direction: column;
+  }
+  .column-products-alt {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .text-products-container {
+    width: 75%;
+  }
 }
 @media screen and (max-width: 790px) {
   footer {
     min-height: 80%;
+  }
+  .contacts-flex {
+    display: flex;
+    flex-direction: column;
+  }
+  .contacts-flex iframe {
+    margin-bottom: 5rem;
   }
 }
 @media screen and (max-width: 553px) {
@@ -418,12 +545,6 @@ footer p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-}
-@media screen and (max-width: 1461px) {
-  .info-box {
-    flex-direction: column;
-    width: 350px;
   }
 }
 @media screen and (max-width: 585px) {
@@ -440,6 +561,9 @@ footer p {
   .text-cover {
     margin-top: 5rem;
   }
+  .box-contact-index {
+    width: 190px;
+  }
 }
 @media (max-width: 354px) {
   .nav-column {
@@ -452,6 +576,10 @@ footer p {
   }
   .navbar-links {
     display: block;
+  }
+  .newsletter-menu {
+    display: flex;
+    flex-direction: column;
   }
 }
 
