--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,13 +12,20 @@
   padding: 2rem;
 }
 .y-transition{
-  animation: 1.2s ease transicionEnY;
+  animation: 1.2s ease transitionY;
 }
 .opacity-0-100{
   animation: 2.5s ease opacity0to1;
 }
-.x-transicion{
-  animation: 1.90s ease-in-out transicionEnX;
+.x-transition{
+  animation: 1.90s ease-in-out transitionX;
+}
+.x-transitionNegative{
+  animation: 1.90s ease-in-out transitionXNegative;
+}
+.colorMain{
+  background: rgb(102, 4, 4);
+  background: linear-gradient(90deg, rgb(102, 4, 4) 8%, rgb(0, 0, 0) 85%, rgb(93, 2, 2) 100%);
 }
 // MIXINS
 @mixin userCard(){
@@ -48,10 +55,16 @@
     transform: scale(1.05);
   }
 }
+@mixin filaGrid(){
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 0.1fr));
+  grid-gap: 1.2rem;
+  justify-content:center;
+}
 // VARIABLES
 $fontsizetitulos: 100px;
 $fontsizeparrafos: calc($fontsizetitulos/2);
-
+$mainFontFamily: "Bebas Neue", sans-serif;
 // GENERAL
 .content-wrap {
   min-height: 100%;
@@ -113,6 +126,7 @@ nav{
   background: linear-gradient(90deg, rgb(102, 4, 4) 8%, rgb(0, 0, 0) 85%, rgb(93, 2, 2) 100%);
 }
 .navbar-main{
+  margin-left: 3%;
   display: flex;
   gap: 5rem;
 }
@@ -143,34 +157,60 @@ nav{
     font-family: "Bebas Neue", sans-serif;
   }
 }
-.btn-bg {
-  display: inline-block;
-  padding: 1rem;
-  background-color: black;
-  border-radius: 4px;
-  font-size: calc($fontsizetitulos - 60px);
-}
-.btn-line{
-  max-width: 50px;
-  height: 2px;
-  background-color: yellow;
-  transition: all .4s ease-in-out
+.main-btn{
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 13px 23px;
+  border: 1px solid #222222;
+  @extend .colorMain;
 }
 .title-cover {
-  @extend .centerflex
+  @extend .centerflex;
+  margin-bottom: 3rem;
+}
+.div-line{
+  border-bottom: 3px solid black;
+  width: 80%
 }
 .intro-p{
   @extend .centerflex;
   gap: 30%;
 }
-.container-intro {
-  background: rgb(0,0,0);
-  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(85,28,28,1) 49%, rgba(0,0,0,1) 100%);
+.sales-index{
+  @include filaGrid()
+}
+.traditions-ad{
+  display: flex;
+  justify-content: space-around;
+}
+.card-icons{
+  padding: 1rem;
+  width: max-content;
+  border: 3px solid black;
+  border-radius: 50%;
+  @extend .y-transition;
+}
+.box-contact-index{
+  border-radius: 12px;
+  box-shadow: 10px 10px 5px 0px rgba(199,124,124,0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(199,124,124,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(199,124,124,0.75);
+  background-color: black;
+  padding: 2rem;
+  width: 50%;
+  height: 50%;
+  flex-direction: column;
+  button{
+    border-radius: 12px;
+  }
 }
 // EMPLEADOS
 .empleados-cover{
   background-size: cover;
-  background-position: center;
   min-height: 100vh;
   width: 100%;
   @extend .centerflex;
@@ -178,7 +218,7 @@ nav{
   background-repeat: no-repeat;
   background-size: cover;
   h1{
-    @extend .x-transicion;
+    @extend .x-transition;
     font-size: $fontsizetitulos;
     color: white;
     padding-top: 20px;
@@ -194,7 +234,7 @@ nav{
 }
 .admins-section{
   @extend .centerflex;
-  gap: 20rem;
+  gap: 15rem;
 }
 .employee-section{
   margin-top: 5rem;
@@ -210,10 +250,6 @@ nav{
 .usercard{
   @include userCard()
 }
-.usercard:hover{
-  background: rgb(207,184,194);
-  background: linear-gradient(52deg, rgba(207,184,194,1) 0%, rgba(85,46,46,1) 0%);
-}
 /* CONTACTOS */
 .bg-form{
   background: url(../imgs/background-form.jpg);
@@ -227,30 +263,30 @@ nav{
   }
 }
 .map-settings {
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  min-width: 100vw;
+  display: flex;
+  gap: 5rem;
 }
-.flex-form{
-  @extend .centerflex;
-  padding-top: 3rem;
-  padding-left: 20rem;
-  padding-right: 20rem;
-  padding-bottom: 3rem;
-  margin-top: 10rem;
-  margin-bottom: 10rem;
+.info-box{
+  display: flex;
+  flex-direction: column;
+  gap: 15%;
+  padding: 3rem;
   h3{
     color: black;
     font-size: $fontsizetitulos - 30px;
   }
-  background: rgba(255, 255, 255, 0);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+  background-color: white;
+  border-radius: 10px;
+  @extend .x-transitionNegative;
 }
-.info-box{
-  display: flex;
-  justify-content: center;
-  gap: 15%;
+.contacts-flex{
+  margin-top: 7rem;
+  iframe{
+    @extend .x-transition;
+  }
+}
+.form-styling{
+  @extend .centerflex;
 }
 .contact-info {
   display: grid;
@@ -262,40 +298,71 @@ nav{
   font-size: $fontsizeparrafos;
 }
 // NEWSLETTER
-.newsletter-box{
-  background: url(https://www.bodegasdomecq.com/sites/default/files/2022-01/D-newsletter-header_1.jpg);
+.cover-newsletter{
+  @extend .centerflex;
+  background: url(../imgs/newsletter-bg.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  h3, p, label, input, button{
-    font-family: 'Oswald', sans-serif;
-    color: white;
+  background-position: center center;
+  min-width: 100vw;
+  padding: 10rem;
+  h1{
+    font-size: $fontsizetitulos;
+    @extend .opacity-0-100;
   }
-  h3{
-    font-size: $fontsizetitulos - 40px;
-  }
+}
+.newsletter-input{
+  border: 1px solid black;
   p{
-    font-size: $fontsizeparrafos - 20px;
+    font-family: "Bebas Neue", sans-serif;
+  }
+  label{
+    border-right: 1px solid black;
   }
   input{
-    max-width: 50%;
+    border: none;
+    outline: none;
+    &:focus{
+      outline: none;
+    }
   }
 }
-.button-newsletter{
+.newsletter-box{
+  @extend .centerflex;
+}
+.newsletter-custom{
+  border-radius: 104px 104px 0px 10px;
+  -webkit-border-radius: 104px 104px 0px 10px;
+  -moz-border-radius: 104px 104px 0px 10px;
+}
+.newsletter-menu{
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.52);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.52);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.52);
   border-radius: 15px;
-  background-color: blueviolet;
-  width: min-content;
+  padding: 2rem;
+  img{
+    width: 100%;
+    height: 100%
+  }
+  @extend .opacity-0-100;
 }
 // PRODUCTOS
-@mixin filaGrid(){
-  display: grid;
-  place-items: center;
-  gap: 5rem;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+.cover-products{
+  @extend .centerflex;
+  background: url(../imgs/bg-products.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  min-width: 100vw;
+  padding: 10rem;
+  h1{
+    font-size: $fontsizetitulos;
+    @extend .x-transition;
+  }
 }
 .productos-gallery{
   padding-top: 5rem;
@@ -305,10 +372,9 @@ nav{
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-  border: 2px solid black;
+  border: 1px solid black;
   img{
     border: 1px solid black;
-    padding: 2rem;
   }
   p{
     font-family: "Bebas Neue", sans-serif;
@@ -321,11 +387,29 @@ nav{
   }
   @include hoverAnimation()
 }
-.bg-products{
-  background: url(../imgs/bg-products.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-
+.product-container{
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  @extend .x-transitionNegative;
+  img{
+    width: 50%;
+    height: 50%;
+  }
+}
+.product-container-alt{
+  display: flex;
+  justify-content: start;
+  height: fit-content;
+  @extend .x-transition;
+  img{
+    width: 50%;
+    height: 50%;
+    margin-left: 5rem;
+  }
+}
+.text-products-container{
+  width: 25%;
 }
 // FOOTER
 .footer-line{
@@ -345,7 +429,7 @@ footer{
   }
 }
 // KEYFRAMES
-@keyframes transicionEnY{
+@keyframes transitionY{
   0%{
     transform: translateY(-100%);
     opacity: 0;
@@ -363,9 +447,19 @@ footer{
     opacity: 1;
   }
 }
-@keyframes transicionEnX {
+@keyframes transitionX {
   0%{
     transform: translateX(50%);
+    opacity: 0;
+  }
+  100%{
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes transitionXNegative {
+  0%{
+    transform: translateX(-50%);
     opacity: 0;
   }
   100%{
@@ -389,11 +483,51 @@ footer{
   .bg-intro-content{
     margin-top: 5rem;
   }
+  .cover-newsletter{
+    h1{
+      font-size: $fontsizetitulos - 20px;
+    }
+  }
+}
+@media screen and (max-width: 375px) {
+  .filter-bg{
+    h1{
+      font-size: $fontsizetitulos - 30px;
+    }
+  }
+}
+@media screen and (max-width: 900px){
+  .product-container{
+    justify-content: center;
+    animation: 2.5s ease opacity0to1;
+  }
+  .product-container-alt{
+    justify-content: center;
+    animation: 2.5s ease opacity0to1;
+  }
+  .column-products{
+    display: flex;
+    flex-direction: column;
+  }
+  .column-products-alt{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .text-products-container{
+    width: 75%;
+  }
 }
 @media screen and (max-width: 790px) {
 footer{
   min-height: 80%;
   }
+.contacts-flex{
+  display: flex;
+  flex-direction: column; 
+  iframe{
+    margin-bottom: 5rem;
+  }
+}
 }
 @media screen and (max-width:553px) {
   .newsletter-box{
@@ -401,6 +535,7 @@ footer{
       margin-top: 10rem;
     } 
   }
+
 }
 @media screen and (max-width: 1024px) {
     .intro-style{
@@ -408,12 +543,6 @@ footer{
       flex-direction: column;
       justify-content: center;
     }
-}
-@media screen and (max-width: 1461px) {
-  .info-box{
-    flex-direction: column;
-    width: 350px;
-  }
 }
 @media screen and (max-width: 585px){
   .title-intro{
@@ -431,6 +560,9 @@ footer{
   .text-cover{
     margin-top: 5rem;
   }
+  .box-contact-index{
+    width: 190px;
+  }
 }
 @media (max-width: 354px){
   .nav-column{
@@ -443,5 +575,9 @@ footer{
   }
   .navbar-links{
     display: block;
+  }
+  .newsletter-menu{
+    display: flex;
+    flex-direction: column;
   }
 }
